--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,24 @@ a {
     transform: translateY(10px);
   }
 }
+
+.item {
+  border: 5px solid #bbb;
+  border-radius: 5px;
+  width: 300px;
+  height: 400px;
+  position: relative;
+  background-size: cover;
+}
+
+.item:nth-child(1) {
+  background: url("/assets/laptops.png");
+}
+
+.item:nth-child(2) {
+  background: url("/assets/laptops.png");
+}
+
+.item:nth-child(3) {
+  background: url("/assets/laptops.png");
+}
